Update to JAVA 21 + SpringBoot 3.3.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8001
+server.port=8002
+spring.application.name=tasks-backend
 
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
@@ -12,4 +13,4 @@ spring.datasource.password=${DATABASE_PASSWD:password}
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=${DATABASE_UPDATE:create}
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
