--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8001
 spring.application.name=tasks-backend
 
+server.error.include-message=always
+
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
